--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.8.2"
   },
